# infrastructure-anomaly-detection

./: LICENSE  README.md  docker-compose.yml  final_report.json  pyproject.toml
app/: main.py
app/config/: logger.py  settings.py
app/schemas/: input.py  output.py
app/services/: workflow.py
app/services/anomaly_detector/: base.py  classic.py  factory.py  utils.py
app/services/kafka/: consume_test_script.py  consumer.py  produce_test_script.py  producer.py
app/services/llm/: base.py  llm.py
